update interacted_element schema to parse out attributes correctly, and rename state_change
